--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,6 @@ layout: default
 ---
 <h2>{{ page.title }}</h2>
 
-<p>{{ page.date | date_to_string }}</p>
+<p>{{ page.date | date: '%F' }}</p>
 
 {{ content }}
